Make sure fixed heigh rows do not overflow

--- a/includes/builder/assets/front.css
+++ b/includes/builder/assets/front.css
@@ -3,6 +3,9 @@
     flex-wrap: nowrap;
     gap: var(--fxb-template-gap, 2em);
 }
+.fxb-row > .fxb-wrap[style*="height:"] {
+    overflow: hidden;
+}
 
 .fxb-row {
     width: 100%;
